Finished Add Receptionist and List All Receptionists

--- a/listreceptionist.html
+++ b/listreceptionist.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>List all Nurses</title>
+    <title>List all Receptionists</title>
 </head>
 <body>
-<form action="listnurse.php"
+<form action="listreceptionist.php"
       method="post">
     <fieldset>
-        <span style="text-decoration: underline;">List of all Nurses</span>
+        <span style="text-decoration: underline;">List of all Receptionists</span>
         <p>
             <input type="submit" value="Submit" />
         </p>
