Modified the list to match Bootstrap Style, Removed Employee Type from the View, Removed List HTML files, Added Update and Delete Buttons, Merged with Dolly's Sidebar

--- a/adminCommon.html
+++ b/adminCommon.html
@@ -24,11 +24,11 @@
                 <li><a href="http://localhost/HospitalManagement/admin.php">Dashboard</a></li>
                 <li><a href="#">Department</a></li>
                 <li><a href="http://localhost/HospitalManagement/doctorList.php">Doctor</a></li>
-                <li><a href="#">Patient</a></li>
-                <li><a href="#">Nurse</a> </li>
-                <li><a href="http://localhost/HospitalManagement/Pharmacist_List.php">Pharmacist</a></li>
-                <li><a href="http://localhost/HospitalManagement/Laboratorist_List.php">Laboratorist</a></li>
-                <li><a href="#">Receptionist</a></li>
+                <li><a href="listpatient.php">Patient</a></li>
+                <li><a href="listnurse.php">Nurse</a> </li>
+                <li><a href="listpharmacist.php">Pharmacist</a></li>
+                <li><a href="listlaboratorist.php">Laboratorist</a></li>
+                <li><a href="listreceptionist.php">Receptionist</a></li>
                 <li><a href="#">Monitor Hospital</a></li>
         </ul>
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
