monitor test results

--- a/adminCommon.html
+++ b/adminCommon.html
@@ -29,7 +29,7 @@
                 <li><a href="listpharmacist.php">Pharmacist</a></li>
                 <li><a href="listlaboratorist.php">Laboratorist</a></li>
                 <li><a href="listreceptionist.php">Receptionist</a></li>
-                <li><a href="#">Monitor Hospital</a></li>
+                <li><a href="moniter1.php">Monitor Hospital</a></li>
         </ul>
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   </div>
