Doctor update page done

--- a/adminCommon.html
+++ b/adminCommon.html
@@ -23,7 +23,7 @@
       <ul>
                 <li><a href="http://localhost/HospitalManagement/admin.php">Dashboard</a></li>
                 <li><a href="listdepartment.php">Department</a></li>
-                <li><a href="listdoctor.php">Doctor</a></li>
+                <li><a href="doctorList.php">Doctor</a></li>
                 <li><a href="listpatient.php">Patient</a></li>
                 <li><a href="listnurse.php">Nurse</a> </li>
                 <li><a href="listpharmacist.php">Pharmacist</a></li>
