submit button index.html

--- a/adminCommon.html
+++ b/adminCommon.html
@@ -30,6 +30,7 @@
                 <li><a href="listlaboratorist.php">Laboratorist</a></li>
                 <li><a href="listreceptionist.php">Receptionist</a></li>
                 <li><a href="moniter1.php">Monitor Hospital</a></li>
+                <li><a href="index.html">logout</a></li>
         </ul>
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   </div>
