--- a/patientcommon.html
+++ b/patientcommon.html
@@ -27,7 +27,7 @@
         <li><a href="patient.php">Dashboard</a></li>
                 <li><a href="patientappointment.php">Appointments</a></li>
                 <li><a href="patientmessages.php">Messages</a></li>
-                <li><a href="#">Prescriptions</a></li>
+                <li><a href="patient_presc.php">Prescriptions</a></li>
                 <li><a href="labresults.php">Lab results</a></li>
                 <li><a href="AdmitHistory.php">Admit History</a></li>
                 <li><a href="Bill.php">Bill details</a></li>
