Add Patient FIx

--- a/adminCommon.html
+++ b/adminCommon.html
@@ -18,10 +18,11 @@
   <div class="container-fluid">
 <div class="row">
   <div class="col-md-2">
-      <div class="side-bar">
+      <div class="side-bar" style="
+    height: 2000px;">
     <br>
       <ul>
-                <li><a href="http://localhost/HospitalManagement/admin.php">Dashboard</a></li>
+                <li><a href="admin.php">Dashboard</a></li>
                 <li><a href="listdepartment.php">Department</a></li>
                 <li><a href="doctorList.php">Doctor</a></li>
                 <li><a href="listpatient.php">Patient</a></li>
