Bill Pages for Receptionist

--- a/receptionistCommon.html
+++ b/receptionistCommon.html
@@ -25,7 +25,7 @@
                     <li><a href="listdoctorr.php">Doctor</a></li>
                     <li><a href="listpatientr.php">Patient</a></li>
                     <li><a href="listappointmentr.php">Appointments</a> </li>
-                    <li><a href="billr.php">Bill</a></li>
+                    <li><a href="billoutr.php">Bill</a></li>
                 </ul>
                 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             </div>
