--- a/receptionistCommon.html
+++ b/receptionistCommon.html
@@ -26,6 +26,7 @@
                     <li><a href="listpatientr.php">Patient</a></li>
                     <li><a href="listappointmentr.php">Appointments</a> </li>
                     <li><a href="billoutr.php">Bill</a></li>
+                    <li><a href="index.html">logout</a></li>
                 </ul>
                 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             </div>
