--- a/pharmacommon.html
+++ b/pharmacommon.html
@@ -23,6 +23,7 @@
       <ul >
         <li><a href="pharmacist.php">Dashboard</a></li>
                 <li><a href="Orders.php">Orders</a></li>
+                 <li><a href="index.html">Logout</a></li>
         </ul>
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   </div>
